--- a/src/main.scss
+++ b/src/main.scss
@@ -11,6 +11,44 @@ body {
     background-color: $main;
 }
 
+/* Text */
 h1, h2, h3 {
     font-family: 'Black Delights';
+}
+
+/* Hero */
+.hero-container {
+    align-items: center;
+    justify-content: center;
+
+    .hero-content {
+        padding: 3rem;
+        align-items: center;
+    }
+
+    .expand-btn {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    
+        img {
+            width: 1.5rem;
+        }
+    }
+}
+
+/* Socials */
+.socials {
+    position: absolute;
+    display: flex;
+    flex-direction: column-reverse;
+    right: 0;
+    top: 0;
+    margin: 2rem;
+
+    img {
+        width: 3.5rem;
+        padding: 0.75rem;
+    }
 }
