--- a/src/main.scss
+++ b/src/main.scss
@@ -9,6 +9,7 @@ $accent: #FEE0D9;
 
 body {
     background-color: $main;
+    color: $text;
 }
 
 /* Text */
@@ -18,12 +19,15 @@ h1, h2, h3 {
 
 /* Hero */
 .hero-container {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 
     .hero-content {
         padding: 3rem;
         align-items: center;
+        justify-content: center;
     }
 
     .expand-btn {
