--- a/src/main.css
+++ b/src/main.css
@@ -5,6 +5,7 @@
 
 body {
   background-color: #FCF3F1;
+  color: #320906;
 }
 
 /* Text */
@@ -14,6 +15,13 @@ h1, h2, h3 {
 
 /* Hero */
 .hero-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -27,6 +35,9 @@ h1, h2, h3 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .hero-container .expand-btn {
